<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.elins.aktvtas.RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/register_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorForeground"
            android:textStyle="bold"
            android:text="@string/app_name"/>

        <Spinner
            android:id="@+id/gender_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_text"
            android:layout_marginTop="40dp"
            android:background="@color/colorForeground"
            android:paddingBottom="13dp"
            android:paddingTop="13dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/age"
            style="@style/Theme.AppCompat.Light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/gender_spinner"
            android:background="@color/colorForeground"
            android:hint="@string/age"
            android:inputType="number"
            android:imeOptions="actionGo"
            android:paddingBottom="13dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="13dp"
            android:layout_marginTop="4dp"
            android:textSize="16sp" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/age"
            android:layout_marginTop="30dp"
            android:background="#1A237E"
            android:text="@string/continue_text"
            android:textAlignment="center"
            android:textColor="@color/colorForeground" />

    </RelativeLayout>

</RelativeLayout>
